[tool.poetry]
name = "prevenger"
version = "0.1.0"
description = "A set of tools that make Python tasty"
include = []
authors = [
    "twocucao <twocucao@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/twocucao/prevengers"
homepage = "https://github.com/twocucao/prevengers"

keywords = ['prevenger']

[[tool.poetry.source]]
name = "douban"
url = 'https://pypi.douban.com/simple/'

[tool.poetry.dependencies]
python = "^3.7"
werkzeug = "*"
requests = "*"
click_didyoumean = "^0.0.3"
crayons = "^0.2.0"
click_completion = "^0.5.1"
sqlalchemy = "*"
black = "^19.10b0"
pydantic = "^1.5.1"
qrcode = "^6.1"
pytest_sugar = "^0.9.3"

[tool.poetry.dev-dependencies]
ipython = "*"
fabric = "*"
gunicorn = "*"
flask = "*"
pillow = "*"
xlsxwriter = "*"
xlrd = "^1.2.0"
ipdb = "*"
captcha = "^0.3"

coverage = "*"
flake8 = "*"
mypy = "*"

pytest = "*"
pytest-cov = "*"
pre-commit = "^1.16"
virtualenv = "20.0.18"


[tool.poetry.scripts]
prevenger-cli = 'prevenger.cli:main'
pv-cli = 'prevenger.cli:main'

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | assets
  | scripts
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


