[tool.poetry]
name = "hutoolpy"
version = "0.1.0"
description = "A set of tools that make Python tasty"
include = []
authors = [
    "twocucao <twocucao@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/twocucao/hutoolpy"
homepage = "https://github.com/twocucao/hutoolpy"

keywords = ['hutoolpy']

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/twocucao/hutoolpy/issues"

[[tool.poetry.source]]
name = "aliyun"
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.9"
werkzeug = "*"
requests = "*"
click_didyoumean = "*"
crayons = "*"
click_completion = "*"
sqlalchemy = "*"
pydantic = "*"
qrcode = "*"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
ipython = "*"
fabric = "*"
gunicorn = "*"
flask = "*"
pillow = "*"
xlsxwriter = "*"
xlrd = "*"
ipdb = "*"
captcha = "*"

coverage = "*"
flake8 = "*"
mypy = "*"

pytest = "*"
pytest-cov = "*"
pytest_sugar = "*"
pre-commit = "*"
black = "*"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
psycopg2 = { version = "^2.7", optional = true }
mysqlclient = { version = "^1.3", optional = true }

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.poetry.scripts]
hutoolpy-cli = 'hutoolpy.cli:main'

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | assets
  | scripts
)/
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


