[project]
name = "hutoolpy"
version = "0.2.0"
description = ""
authors = [
    {name = "twocucao", email = "twocucao@gmail.com"},
]
dependencies = [
    "requests~=2.26",
    "flask~=2.0",
    "werkzeug~=2.0",
    "click-didyoumean~=0.3",
    "crayons~=0.4",
    "click-completion~=0.5",
    "sqlalchemy~=1.4",
    "pydantic~=1.8",
    "qrcode~=7.3",
    "schedule~=1.1",
    "pillow>=9.3.0",
    "captcha>=0.4",
    "typer>=0.7.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
verify_ssl = true


[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.7.0",
    "gunicorn>=20.1.0",
    "xlsxwriter>=3.0.3",
    "xlrd>=2.0.1",
    "ipdb>=0.13.11",
    "coverage>=7.0.1",
    "flake8>=6.0.0",
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=0.9.6",
    "pre-commit>=2.21.0",
    "black>=22.12.0",
]
[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .cached
)/
'''
